
The Initials of the contributors to this software are marked in square
brackets after the features/fixes that the person contributed.  A list of
contributors can be found at the end of this document.  If all changes in a
specific alpha release have been made by the same person, the person is
only mentioned in the headline of that alpha release, rather than after
each feature.

CFRoute 1.0 stable (forked off for release at 08 Oct 2000)
----------------------------------------------------------
    - Fix: Modified the handling of LASTRUN.CFR. Previously, on some Unix
      variants, it could happen that a file that could not be processed
      because the destination link was busy was NOT reprocessed on a later
      run, unless you used the -I option.
    - New: Keyword KILLTRANSITFILES. If this keyword is set, attached files
      from intransit mail will be deleted after the mailer has sent them, even
      if the (transit) mail did not carry the KFS flag. [TE]
    - New: Keyword INBOUND. With this keyword, you can configure the
      directories where cfroute will search for file-attaches from in-transit
      mail. This is necessary when the tosser does NOT add the correct path
      name to the subject of netmails with file-attaches, like e.g. hpt.
      When the tosser does append the path (like Fastecho), you don't need
      the INBOUND keyword, although it won't to any harm. [TE]
    - Fix: LASTRUN.CFR did not work properly on Unix - cfroute was always
      rescanning the complete netmail folder, instead of only new netmails.
      This is fixed now (if you want the old behaviour, use the -I command
      line flag). [TE]
    - New: Preliminary FIDOCONFIG support. You can use the FC2CFR program,
      which is now part of cfroute, to generate a working CFROUTE
      configuration file from your fidoconfig configuration file. [TE]
    - If the new keyword "NOLOOPROUTE" is set in the config file, we will not